# HKJ-FTP

./: .gitignore  CMakeLists.txt
include/: def.h  exception.h  hkjclient.h  hkjserver.h
src/: CMakeLists.txt
src/hkj-client/: CMakeLists.txt  cli.cpp  hkjclient.cpp
src/hkj-server/: CMakeLists.txt  cli.cpp  hkjserver.cpp
